@@ -1,5 +1,9 @@
 2006-04-20 Erwann Chenede - <erwann.chenede@sun.com>
 
+  * make index.theme work
+
+2006-04-20 Erwann Chenede - <erwann.chenede@sun.com>
+
   * make it compatible with JDS 3 (no cairo, hardcode Minor version)
 
 2006-04-20 Erwann Chenede - <erwann.chenede@sun.com>
